La till och ordnade kalender och datorval på webbsidan samt justerade PcSel classen

--- a/web/welcomePrimefaces.xhtml
+++ b/web/welcomePrimefaces.xhtml
@@ -22,6 +22,7 @@
                     <p:link value="Fråga" outcome="question.xhtml"/>
                     <br></br>
                     <p:link value="Felanmälan" outcome="incident.xhtml"/>
+                    <p:link value="Låna dator" outcome="borrowpc.xhtml"/>
                     <h:form>
                     <h:commandButton value="logout" action="#{login.logout}" />
                     </h:form>
