--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -11,6 +11,7 @@
         <br />
         <h:form id="myform">
             <h:selectOneMenu value="#{login.username}" >
+                <f:selectItem itemLabel="Välj ett" />
                 <f:selectItems value="#{login.users}" var="user" itemValue="#{user}" itemLabel="#{user.firstname}"/>
             </h:selectOneMenu>
     <h:messages globalOnly="true" style="color:red;margin:8px;" />
