--- a/web/borrowpc.xhtml
+++ b/web/borrowpc.xhtml
@@ -16,10 +16,10 @@
                 <f:selectItems value="#{select.pcs}" var="pcName" itemValue="#{pcName}"/>
             </h:selectOneMenu>
     <h:messages globalOnly="true" style="color:red;margin:8px;" />
-    
+    <p:inputText value="#{loanBean.descrip}" />
     <h:outputText value="Datum: "/>
-    <p:calendar  id="conDate" value="#{select.idate}"  pattern="yyyy-MMM-dd" mindate="today" required="true" locale="se"/>
-    <h:commandButton value="login" action="#{select.sendPcName()}" />
+    <p:calendar  id="returndate" value="#{select.idate}"  pattern="yyyy-MMM-dd" mindate="today" required="true" locale="se"/>
+    <h:commandButton value="login" action="#{aloanBean.add()}" />
     </h:form>
         
         <script type="text/javascript">
