Små fix hit och ditt.

--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -36,7 +36,7 @@
             </main>
         
         <div class="footer">
-        <p>&copy; Dimitrios Sria, IT-avdelning, Polismyndigheten</p>
+        <p><h:link outcome="about">&copy; Dimitrios Sria</h:link>, IT-avdelning, Polismyndigheten </p>
     </div>
     </h:body>
 </html>
