--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -31,7 +31,7 @@
                 
                 <li>
                 <p:selectOneListbox id="basic" value="#{aBean.descrip}">
-             <f:selectItem itemLabel="Välj" itemValue="" noSelectionOption="true"/>
+             <f:selectItem itemLabel="Välj" itemValue="" noSelectionOption="true" itemDisabled="true"/>
             <f:selectItem itemLabel="Trasig dator" itemValue="Trasig dator" />
             <f:selectItem itemLabel="Trasig mobil" itemValue="Trasig mobil" />
             <f:selectItem itemLabel="Övrigt" itemValue="Övrigt" />
