Några småfixar hit och ditt.

--- a/web/about.xhtml
+++ b/web/about.xhtml
@@ -26,12 +26,17 @@
           <b>Om Mig</b>
         </h3>
         <img src="img/avatar.jpg" alt="Avatar" style="width:30%"></img>
-        <b>Dimitrios Sria</b>
-        <p>IT-Tekniker</p>
+        <b>Hej!</b>
+        <p>Dimitrios Sria
+        heter jag och jobbar som IT-Tekniker för</p>
         <p>IT-Avdelning, Leverans och Support</p>
-        <p>Polismyndigheten</p>
+        <p>hos Polismyndigheten</p>
         <p>
-          <a href="mailto:dimitrios.sria@polisen.se">dimitrios.sria@polisen.se</a> Tel. 39410
+          
+            
+        </p>
+        <p>
+          <a href="mailto:dimsria@gmail.com">dimsria@gmail.com</a> Tel. 0760150660
         </p>
       </div>
     </main>
