--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -46,7 +46,7 @@
         <p:commandButton value="Logga ut" action="#{login.logout()}" class="cButton"/>
       </h:form>
       <p>
-        <h:link outcome="about">&copy; Dimitrios Sria</h:link>, IT-avdelning, Polismyndigheten 
+        <h:link outcome="about">&copy; Dimitrios Sria</h:link>
       </p>
     </div>
   </h:body>
