--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -32,7 +32,7 @@
     </main>
     <div class="footer">
       <p>
-        <h:link outcome="about">&copy; Dimitrios Sria</h:link>, IT-avdelning, Polismyndigheten 
+        <h:link outcome="about">&copy; Dimitrios Sria</h:link>
       </p>
     </div>
   </h:body>
