--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -69,7 +69,7 @@
             
     </main>
     <div class="footer">
-      <p> &copy; Dimitrios Sria, IT-avdelning, Polismyndigheten </p>
+      <p> &copy; Dimitrios Sria</p>
     </div>
 
   </h:body>
