Några småfix hit och ditt

--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -58,5 +58,14 @@
         </tr>
       </table>
     </main>
+      <div class="footer">
+      <h:form class="aform">
+        <p:button outcome="index" value="Hem" style="margin-right:20px;"></p:button>
+        
+      </h:form>
+      <p>
+        <h:link outcome="about">&copy; Dimitrios Sria</h:link>
+      </p>
+    </div>
   </h:body>
 </html>
