Några småfix hit och ditt, la till produktlista med bildfunktion samt lägga till nya produkter.

--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -49,7 +49,7 @@
             </a>
           </td>
           <td>
-            <a href="products.xhtml">
+            <a href="addproducts.xhtml">
               <button class="btn">Produkter
                 <i class="fas fa-store-alt fa-3x"></i>
               </button>
