--- a/web/products.xhtml
+++ b/web/products.xhtml
@@ -6,11 +6,10 @@
    xmlns:f="http://java.sun.com/jsf/core"
    xmlns:p="http://primefaces.org/ui">
    <h:head>
-      <meta charset="utf-8">
-      </meta>
+      
       <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type">
       </meta>
-       <meta http-equiv="content-type" content="text/html" charset="ISO-8859-1"/>
+       <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
       <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
       <h:outputStylesheet name="/styles.css"/>
       <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
@@ -59,7 +58,7 @@
                         <h:outputText value="Bild" />
                     </f:facet>
                     <h:outputLink value="DisplayImage?prodid=#{item.prodid}" target="_blank" >
-                    <p:graphicImage value="DisplayImage?prodid=#{item.prodid}" width="100" height="100"  onclick="PF('imageDialog').show();"/>
+                    <p:graphicImage value="DisplayImage?prodid=#{item.prodid}" width="40" height="40"  onclick="PF('imageDialog').show();"/>
                     </h:outputLink>
                 </p:column>
                 </p:dataTable>
