--- a/web/addproducts.xhtml
+++ b/web/addproducts.xhtml
@@ -6,12 +6,9 @@
    xmlns:f="http://java.sun.com/jsf/core"
    xmlns:p="http://primefaces.org/ui">
    <h:head>
-      <meta charset="utf-8">
-      </meta>
-      <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type">
-      </meta>
-      <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-      <h:outputStylesheet name="/styles.css"/>
+      <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8"/>
+      <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"/>
+      <h:outputStylesheet name="styles.css"/>
       <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
       <title>Lägga till Produkter</title>
    </h:head>
@@ -49,7 +46,7 @@
                      <h:outputLabel value="Välj en bild: *" />
                   </p:column>
                   <p:column>
-                     <p:fileUpload value="#{proAddBean.img}" mode="simple"   update="formName:fileName"
+                     <p:fileUpload value="#{proAddBean.img}" mode="simple" update="formName:fileName"
                         auto="true" allowTypes="/(\.|\/)(gif|jpe?g|png)$/" sizeLimit="1000000"  />
                   </p:column>
                </p:row>
