--- a/web/h_order.xhtml
+++ b/web/h_order.xhtml
@@ -1,16 +1,15 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html
-  xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:h="http://java.sun.com/jsf/html"
-  xmlns:f="http://java.sun.com/jsf/core"
-  xmlns:p="http://primefaces.org/ui">
-  <h:head>
-    <meta charset="utf-8"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type"></meta>
-    <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-    <h:outputStylesheet name="/styles.css"/>
-    <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
+   xmlns="http://www.w3.org/1999/xhtml"
+   xmlns:h="http://java.sun.com/jsf/html"
+   xmlns:f="http://java.sun.com/jsf/core"
+   xmlns:p="http://primefaces.org/ui">
+   <h:head>
+    <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8"/>
+      <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
+      <h:outputStylesheet name="styles.css"/>
+      <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
     <title>Hämta Aktiveringskod</title>
   </h:head>
   <h:body>
