--- a/web/webshop.xhtml
+++ b/web/webshop.xhtml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html
    xmlns="http://www.w3.org/1999/xhtml"
@@ -6,14 +6,14 @@
    xmlns:f="http://java.sun.com/jsf/core"
    xmlns:p="http://primefaces.org/ui">
    <h:head>
-      <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type"/>
+    <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8"/>
       <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-      <h:outputStylesheet name="/styles.css"/>
+      <h:outputStylesheet name="styles.css"/>
       <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
       <title>Lägga till Produkter</title>
    </h:head>
    <h:body>
-      <header>
+      <header>Webbshop
          <h1> Mini Webbshop </h1>
          <div class="logo-img">
             <img src="img/logo.png"></img>
