La till sökfunktion samt småfix med sidans storlekar och placering

--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -8,7 +8,7 @@
    <h:head>
     <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8"/>
       <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-      <h:outputStylesheet name="styles.css"/>
+      <h:outputStylesheet name="/styles.css"/>
       <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
     <title>Admin Meny</title>
   </h:head>
