småfix hit och ditt med css

--- a/web/order_1.xhtml
+++ b/web/order_1.xhtml
@@ -4,12 +4,11 @@
    xmlns="http://www.w3.org/1999/xhtml"
    xmlns:h="http://java.sun.com/jsf/html"
    xmlns:f="http://java.sun.com/jsf/core"
-   xmlns:p="http://primefaces.org/ui"
-   xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+   xmlns:p="http://primefaces.org/ui">
    <h:head>
        <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8"/>
       <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-      <h:outputStylesheet name="/styles.css"/>
+      <h:outputStylesheet name="styles.css" library="css"/>
       <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
       <title>Beställa</title>
    </h:head>
