--- a/web/products.xhtml
+++ b/web/products.xhtml
@@ -8,7 +8,7 @@
    <h:head>
     <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8"/>
       <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-      <h:outputStylesheet name="/styles.css"/>
+      <h:outputStylesheet name="/css/styles.css"/>
       <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
       <title>Produkter</title>
    </h:head>
@@ -20,7 +20,7 @@
          </div>
       </header>
       <main>
-          <h:form >
+          <h:form class="aform" >
               <p:dataTable value="#{proBean.all}" class="dataTable" var="item" >          
                 
                    <p:column>
