--- a/web/test.xhtml
+++ b/web/test.xhtml
@@ -3,13 +3,12 @@
 <html
   xmlns="http://www.w3.org/1999/xhtml"
   xmlns:h="http://java.sun.com/jsf/html"
-  xmlns:f="http://java.sun.com/jsf/core"
   xmlns:p="http://primefaces.org/ui">
   <h:head>
     <meta charset="utf-8"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type"></meta>
     <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-    <h:outputStylesheet name="/styles.css"/>
+    <h:outputStylesheet name="/css/styles.css"/>
     <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
     <title>Hämta Aktiveringskod</title>
   </h:head>
