Ändrade adminlogin till Stateless pga bug samt la till licensheaders på samtliga klasser.

--- a/web/about.xhtml
+++ b/web/about.xhtml
@@ -15,7 +15,7 @@
   <h:body>
     <header>
       <h1> Hermes- Kiosk </h1>
-      <div class="logo-img">
+      <div id="logo-img">
         <img src="img/logo.png"></img>
       </div>
     </header>
@@ -39,7 +39,7 @@
         </p>
       </div>
     </main>
-    <div class="footer">
+    <div id="footer">
       <p:button outcome="menu" value="Hem" style="margin-right:20px;"></p:button>
     </div>
   </h:body>
