--- a/web/activation.xhtml
+++ b/web/activation.xhtml
@@ -15,7 +15,7 @@
   <h:body>
     <header>
       <h1> Hermes- Kiosk </h1>
-      <div class="logo-img">
+      <div id="logo-img">
         <img src="img/logo.png"></img>
       </div>
     </header>
@@ -49,7 +49,7 @@
         </h:form>
       
     </main>
-    <div class="footer">
+    <div id="footer">
       <h:form class="aform">
         <p:button outcome="menu" value="Hem" style="margin-right:20px;"></p:button>
         <p:commandButton value="Logga ut" action="#{login.logout()}" class="cButton"/>
