--- a/web/addpc.xhtml
+++ b/web/addpc.xhtml
@@ -15,7 +15,7 @@
   <h:body> 
       <header>
         <h1> Administration </h1>
-        <div class="logo-img">
+        <div id="logo-img">
           <img src="img/logo.png"></img>
         </div>
       </header>
