--- a/web/addproducts.xhtml
+++ b/web/addproducts.xhtml
@@ -16,7 +16,7 @@
    <h:body>
       <header>
          <h1> Administration </h1>
-         <div class="logo-img">
+         <div id="logo-img">
             <img src="img/logo.png"></img>
          </div>
       </header>
@@ -69,7 +69,7 @@
             </p:panelGrid>
          </h:form>
       </main>
-      <div class="footer">
+      <div id="footer">
          <h:link outcome="about">&copy; Dimitrios Sria</h:link>
       </div>
    </h:body>
