--- a/web/closed.xhtml
+++ b/web/closed.xhtml
@@ -16,7 +16,7 @@
     <main>
       <header>
         <h1> Administration </h1>
-        <div class="logo-img">
+        <div id="logo-img">
           <img src="img/logo.png"></img>
         </div>
       </header>
@@ -127,7 +127,7 @@
         </p:dataTable>
       </h:form>
     </main>
-               <div class="footer">
+               <div id="footer">
       <h:form class="aform">
         <p:button outcome="admin" value="Tillbaka" style="margin-right:20px;"></p:button>
         
