--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -27,7 +27,7 @@
   <h:body>
     <header>
       <h1> Hermes- Kiosk </h1>
-      <div class="logo-img">
+      <div id="logo-img">
         <img src="img/logo.png"></img>    
       </div>
               
@@ -68,7 +68,7 @@
       </ul>
             
     </main>
-    <div class="footer">
+    <div id="footer">
       <p> &copy; Dimitrios Sria</p>
     </div>
 
