--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -15,7 +15,7 @@
   <h:body>
     <header>
       <h1> Hermes- Kiosk </h1>
-      <div class="logo-img">
+      <div id="logo-img">
         <img src="img/logo.png"></img>
       </div>
     </header>
@@ -30,7 +30,7 @@
         </h:panelGrid>
       </h:form>
     </main>
-    <div class="footer">
+    <div id="footer">
       <p>
         <h:link outcome="about">&copy; Dimitrios Sria</h:link>
       </p>
