--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -15,7 +15,7 @@
   <h:body>
     <header>
       <h1> Hermes- Kiosk </h1>
-      <div class="logo-img">
+      <div id="logo-img">
         <img src="img/logo.png"></img>
       </div>
     </header>
@@ -71,7 +71,7 @@
         </tr>
       </table>
     </main>
-    <div class="footer">
+    <div id="footer">
       <h:form class="aform">
         <p:commandButton value="Logga ut" action="#{login.logout()}" class="cButton"/>
       </h:form>
