--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -15,7 +15,7 @@
   <h:body>
     <header>
       <h1> Hermes- Kiosk </h1>
-      <div class="logo-img">
+      <div id="logo-img">
         <img src="img/logo.png"></img>
       </div>
     </header>
@@ -58,7 +58,7 @@
         </tr>
       </table>
     </main>
-      <div class="footer">
+      <div id="footer">
       <h:form class="aform">
         <p:button outcome="index" value="Hem" style="margin-right:20px;"></p:button>
         
