--- a/web/editpc.xhtml
+++ b/web/editpc.xhtml
@@ -15,7 +15,7 @@
   <h:body> 
       <header>
         <h1> Administration </h1>
-        <div class="logo-img">
+        <div id="logo-img">
           <img src="img/logo.png"></img>
         </div>
       </header>
@@ -56,7 +56,7 @@
         </h:form>
       </main>
         
-       <div class="footer">
+       <div id="footer">
       <h:form class="aform">
         <p:button outcome="admin" value="Tillbaka" style="margin-right:20px;"></p:button>
         
