--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -16,7 +16,7 @@
     <main>
       <header>
         <h1> Hermes- Kiosk </h1>
-        <div class="logo-img">
+        <div id="logo-img">
           <img src="img/logo.png"></img>
         </div>
       </header>
@@ -39,7 +39,7 @@
         </ul>
       </h:form>
     </main>
-    <div class="footer">
+    <div id="footer">
       <h:form class="aform">
         <p:button outcome="menu" value="Hem" style="margin-right:20px;"></p:button>
         <p:commandButton value="Logga ut" action="#{login.logout()}" class="cButton"/>
