Snyggade lite webbsidorna

--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -1,52 +1,48 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html
-   xmlns="http://www.w3.org/1999/xhtml"
-   xmlns:h="http://java.sun.com/jsf/html"
-   xmlns:f="http://java.sun.com/jsf/core"
-   xmlns:p="http://primefaces.org/ui">
-   <h:head>
-    <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8"/>
-      <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-      <h:outputStylesheet name="/css/styles.css"/>
-      <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-    <title>Felanmälan</title>
-  </h:head>
-  <h:body>
-    <main>
-      <header>
-        <h1> Hermes- Kiosk </h1>
-        <div id="logo-img">
-          <img src="img/logo.png"></img>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui">
+    <h:head>
+        <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8" />
+        <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
+        <h:outputStylesheet name="/css/styles.css" />
+        <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
+        <title>Felanmälan</title>
+    </h:head>
+    <h:body>
+        <main>
+            <header>
+                <h1>Hermes- Kiosk</h1>
+                <div id="logo-img">
+                    <img src="img/logo.png" />
+                </div>
+            </header>
+            <h:form class="form">
+                <ul>
+                    <li>
+                        <p>Inloggad som: #{login.sentUsername()}</p>
+                    </li>
+                    <li>
+                        <p:selectOneListbox id="basic" value="#{aBean.descrip}">
+                            <f:selectItem itemLabel="Välj" itemValue="" noSelectionOption="true" itemDisabled="true" />
+                            <f:selectItem itemLabel="Trasig dator" itemValue="Trasig dator" />
+                            <f:selectItem itemLabel="Trasig mobil" itemValue="Trasig mobil" />
+                            <f:selectItem itemLabel="Övrigt" itemValue="Övrigt" />
+                        </p:selectOneListbox>
+                    </li>
+                    <li>
+                        <p:commandButton value="Bekräfta" action="#{iBean.add()}" />
+                    </li>
+                </ul>
+            </h:form>
+        </main>
+        <div id="footer">
+            <h:form class="aform">
+                <p:button outcome="menu" value="Hem" style="margin-right: 20px;"></p:button>
+                <p:commandButton value="Logga ut" action="#{login.logout()}" class="cButton" />
+            </h:form>
+            <p>
+                <h:link outcome="about">&copy; Dimitrios Sria</h:link>
+            </p>
         </div>
-      </header>
-      <h:form class="form">
-        <ul>
-          <li>
-            <p>Inloggad som: #{login.sentUsername()}</p>
-          </li>
-          <li>
-            <p:selectOneListbox id="basic" value="#{aBean.descrip}">
-              <f:selectItem itemLabel="Välj" itemValue="" noSelectionOption="true" itemDisabled="true"/>
-              <f:selectItem itemLabel="Trasig dator" itemValue="Trasig dator" />
-              <f:selectItem itemLabel="Trasig mobil" itemValue="Trasig mobil" />
-              <f:selectItem itemLabel="Övrigt" itemValue="Övrigt" />
-            </p:selectOneListbox>
-          </li>
-          <li>
-            <p:commandButton value="Bekräfta" action="#{iBean.add()}"/>
-          </li>
-        </ul>
-      </h:form>
-    </main>
-    <div id="footer">
-      <h:form class="aform">
-        <p:button outcome="menu" value="Hem" style="margin-right:20px;"></p:button>
-        <p:commandButton value="Logga ut" action="#{login.logout()}" class="cButton"/>
-      </h:form>
-      <p>
-        <h:link outcome="about">&copy; Dimitrios Sria</h:link>
-      </p>
-    </div>
-  </h:body>
+    </h:body>
 </html>
