--- a/web/about.xhtml
+++ b/web/about.xhtml
@@ -1,46 +1,36 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html
-   xmlns="http://www.w3.org/1999/xhtml"
-   xmlns:h="http://java.sun.com/jsf/html"
-   xmlns:f="http://java.sun.com/jsf/core"
-   xmlns:p="http://primefaces.org/ui">
-   <h:head>
-    <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8"/>
-      <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
-      <h:outputStylesheet name="/css/styles.css"/>
-      <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-    <title>Om mig</title>
-  </h:head>
-  <h:body>
-    <header>
-      <h1> Hermes- Kiosk </h1>
-      <div id="logo-img">
-        <img src="img/logo.png"></img>
-      </div>
-    </header>
-    <main>
-      <div class="card">
-        <h3>
-          <b>Om Mig</b>
-        </h3>
-        <img src="img/avatar.jpg" alt="Avatar" style="width:30%"></img>
-        <b>Hej!</b>
-        <p>Dimitrios Sria
-        heter jag och jobbar som IT-Tekniker för</p>
-        <p>IT-Avdelning, Leverans och Support</p>
-        <p>hos Polismyndigheten</p>
-        <p>
-          
-            
-        </p>
-        <p>
-          <a href="mailto:dimsria@gmail.com">dimsria@gmail.com</a> Tel. 0760150660
-        </p>
-      </div>
-    </main>
-    <div id="footer">
-      <p:button outcome="menu" value="Hem" style="margin-right:20px;"></p:button>
-    </div>
-  </h:body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui">
+    <h:head>
+        <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8" />
+        <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
+        <h:outputStylesheet name="/css/styles.css" />
+        <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
+        <title>Om mig</title>
+    </h:head>
+    <h:body>
+        <header>
+            <h1>Hermes- Kiosk</h1>
+            <div id="logo-img">
+                <img src="img/logo.png" />
+            </div>
+        </header>
+        <main>
+            <div class="card">
+                <h3>
+                    <b>Om Mig</b>
+                </h3>
+                <img src="img/avatar.jpg" alt="Avatar" style="width: 30%;" />
+                <b>Hej!</b>
+                <p>Dimitrios Sria heter jag och jobbar som IT-Tekniker för</p>
+                <p>IT-Avdelning, Leverans och Support</p>
+                <p>hos Polismyndigheten</p>
+                <p></p>
+                <p><a href="mailto:dimsria@gmail.com">dimsria@gmail.com</a> Tel. 0760150660</p>
+            </div>
+        </main>
+        <div id="footer">
+            <p:button outcome="menu" value="Hem" style="margin-right: 20px;"></p:button>
+        </div>
+    </h:body>
 </html>
