--- a/web/updateloan.xhtml
+++ b/web/updateloan.xhtml
@@ -1,39 +1,31 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html
-  xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:h="http://java.sun.com/jsf/html"
-  xmlns:f="http://java.sun.com/jsf/core"
-  xmlns:p="http://primefaces.org/ui">
-  <h:head>
-      
-      <script type="text/javascript">
-    window.onunload = function(){
-  window.opener.location.reload();
-  window.close(); 
-};
-</script>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui">
+    <h:head>
+        <script type="text/javascript">
+            window.onunload = function () {
+                window.opener.location.reload();
+                window.close();
+            };
+        </script>
 
-    <meta charset="utf-8"></meta>
-    <title>Adminlistor</title>
-  </h:head>
+        <meta charset="utf-8" />
+        <title>Adminlistor</title>
+    </h:head>
     <h:body>
-            
-      <h:form class="form">
-      <p:panelGrid columns="2" style="auto">
-        <p:column>
-          <f:facet name="header">Status</f:facet>
-          <p:selectOneListbox value="#{loanBean.arStatus}">
-            <f:selectItem itemLabel="Stängt" itemValue="Stängt" />
-            <f:selectItem itemLabel="Öppet" itemValue="Öppet" />
-          </p:selectOneListbox>
-        </p:column>
-        <p:column>
-          <p:commandButton value="Ändra" 
-                           action="#{aloanBean.save()}" />
-        </p:column>
-
-      </p:panelGrid>
-    </h:form>
-  </h:body>
+        <h:form class="form">
+            <p:panelGrid columns="2" style="auto">
+                <p:column>
+                    <f:facet name="header">Status</f:facet>
+                    <p:selectOneListbox value="#{loanBean.arStatus}">
+                        <f:selectItem itemLabel="Stängt" itemValue="Stängt" />
+                        <f:selectItem itemLabel="Öppet" itemValue="Öppet" />
+                    </p:selectOneListbox>
+                </p:column>
+                <p:column>
+                    <p:commandButton value="Ändra" action="#{aloanBean.save()}" />
+                </p:column>
+            </p:panelGrid>
+        </h:form>
+    </h:body>
 </html>
