La till webbsidor för öppna beställningar och ändring av dem

--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -54,6 +54,14 @@
                             </button>
                         </a>
                     </td>
+                    <td>
+                        <a href="orders.xhtml">
+                            <button class="btn">
+                                Beställningar
+                                <i class="fas fa-truck fa-3x"></i>
+                            </button>
+                        </a>
+                    </td>
                 </tr>
             </table>
         </main>
