--- a/web/webshop.xhtml
+++ b/web/webshop.xhtml
@@ -58,7 +58,7 @@
                         </p:dataTable>
                     </li>
                     <li>
-                        <p:commandButton value="Ok" id="sub" action="#{orderBean.add()}" style="margin-right: 20px;" />
+                        <p:commandButton value="Ok" id="sub" action="#{orderBean.add()}" style="margin-right: 20px;" ajax="false" />
                     </li>
                 </ul>
             </h:form>
