--- a/web/borrowpc.xhtml
+++ b/web/borrowpc.xhtml
@@ -36,7 +36,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p:commandButton value="Bekräfta" action="#{aloanBean.add()}" class="cButton" />
+                            <p:commandButton value="Bekräfta" action="#{aloanBean.add()}" class="cButton" ajax="false" />
                         </td>
                     </tr>
                 </table>
