--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -6,6 +6,7 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
+        
         <title>Felanmälan</title>
     </h:head>
     <h:body>
@@ -16,6 +17,9 @@
                     <img src="img/logo.png" />
                 </div>
             </header>
+            <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false" resizable="false">
+            <p:graphicImage name="/demo/images/ajaxloadingbar.gif" />
+            </p:dialog>
             <h:form class="form">
                 <ul>
                     <li>
@@ -30,8 +34,10 @@
                         </p:selectOneListbox>
                     </li>
                     <li>
-                        <p:commandButton value="Bekräfta" action="#{iBean.add()}" />
+                        <p:commandButton value="Bekräfta" action="#{iBean.add()}" ajax="false" />
+
                     </li>
+             
                 </ul>
             </h:form>
         </main>
