--- a/web/question.xhtml
+++ b/web/question.xhtml
@@ -28,9 +28,8 @@
                         <p:inputTextarea value="#{aBean.descrip}" rows="5" cols="30" autoResize="true" class="textarea" />
                     </li>
                     <li>
-                        <p:commandButton value="Bekräfta" action="#{qBean.add()}" ajax="false">
-                             <p:fileDownload value="#{downBean.file}"/>
-                        </p:commandButton>
+                        <p:commandButton value="Bekräfta" action="#{qBean.add()}" ajax="false"/>
+
                     </li>
                 </ul>
             </h:form>
