--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -11,11 +11,13 @@
     <h:body>
         <header>
             <h1>Hermes- Kiosk</h1>
-            <div id="logo-img">
-                <img src="img/logo.png" />
-            </div>
+                <img src="img/logo.png" width="280px" />
+                
         </header>
         <main>
+            <div class="nav">
+                <hr></hr>
+            
             <h:form class="form">
                 <h:panelGrid columns="2" style="auto">
                     <p:selectOneListbox value="#{login.username}">
@@ -25,8 +27,10 @@
                     <p:commandButton value="Logga in" action="#{login.login}" class="cButton" />
                 </h:panelGrid>
             </h:form>
+                <hr></hr>
+                </div>
         </main>
-        <div id="footer">
+        <div class="footer">
             <p>
                 <h:link outcome="about">&copy; Dimitrios Sria</h:link>
             </p>
