--- a/web/question.xhtml
+++ b/web/question.xhtml
@@ -6,26 +6,27 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>IT-frågor</title>
+        <title>IT-Frågor</title>
     </h:head>
+    
     <h:body>
+        <header>
+            <h1>Hermes- Kiosk</h1>       
+                <img src="img/logo.png" width="280px" />
+        </header>
         <main>
-            <header>
-                <h1>Hermes- Kiosk</h1>
-                <div id="logo-img">
-                    <img src="img/logo.png" />
-                </div>
-            </header>
-            <h:form class="form">
+            <div class="nav">
+                <hr></hr>
+            <h:form>
                 <ul>
                     <li>
-                        <p>Inloggad som: #{login.sentUsername()}</p>
+                        <h2>Inloggad som: #{login.sentUsername()}</h2>
                     </li>
                     <li>
-                        <p>Ställ din fråga här:</p>
+                        <h3>Ställ din fråga här:</h3>
                     </li>
                     <li>
-                        <p:inputTextarea value="#{aBean.descrip}" rows="5" cols="30" autoResize="true" class="textarea" />
+                        <p:inputTextarea value="#{aBean.descrip}" rows="5" cols="30" autoResize="true" style="margin-bottom: 30px;"/>
                     </li>
                     <li>
                         <p:commandButton value="Bekräfta" action="#{qBean.add()}" ajax="false"/>
@@ -33,11 +34,13 @@
                     </li>
                 </ul>
             </h:form>
+                <hr></hr>
+                </div>
         </main>
-        <div id="footer">
-            <h:form class="aform">
+        <div class="footer">
+            <h:form>
                 <p:button outcome="menu" value="Hem" style="margin-right: 20px;"></p:button>
-                <p:commandButton value="Logga ut" action="#{login.logout()}" class="cButton" />
+                <p:commandButton value="Logga ut" action="#{login.logout()}" />
             </h:form>
             <p>
                 <h:link outcome="about">&copy; Dimitrios Sria</h:link>
