--- a/web/webshop.xhtml
+++ b/web/webshop.xhtml
@@ -6,47 +6,32 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Mini Webbshop</title>
+        <title>IT-Frågor</title>
     </h:head>
+
     <h:body>
         <header>
-            Webbshop
-            <h1>Mini Webbshop</h1>
-            <div id="logo-img">
-                <img src="img/logo.png" />
-            </div>
+            <h1>Hermes- Kiosk</h1>
+            <img src="img/logo.png" width="280px" />
         </header>
         <main>
-            <h:form class="aform">
+            <div class="nav"> 
+            <h:form >
                 <ul>
                     <li>
                         <p>Inloggad som: #{login.sentUsername()}</p>
                     </li>
                     <li>
-                        <p:dataTable value="#{proBean.all}" class="dataTable" var="item" style="table-layout: fixed;">
+                        <hr></hr>
+                        <p:dataTable value="#{proBean.all}" var="item" styleClass="webTable">    
                             <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Id" />
-                                </f:facet>
-                                <h:outputText value="#{item.prodid}" />
+                                <h:outputText value="#{item.title}"/>
                             </p:column>
                             <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Titel" />
-                                </f:facet>
-                                <h:outputText value="#{item.title}" />
-                            </p:column>
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Beskrivning" />
-                                </f:facet>
                                 <h:outputText value="#{item.descrip}" />
                             </p:column>
 
                             <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Bild" />
-                                </f:facet>
 
                                 <p:graphicImage value="DisplayImage?prodid=#{item.prodid}" width="40" height="40" />
                             </p:column>
@@ -60,11 +45,14 @@
                     <li>
                         <p:commandButton value="Ok" id="sub" action="#{orderBean.add()}" style="margin-right: 20px;" ajax="false" />
                     </li>
+                    <hr></hr>
                 </ul>
             </h:form>
+                
+             </div>   
         </main>
-        <div id="footer">
-            <h:form class="aform">
+        <div class="footer">
+            <h:form>
                 <p:button outcome="menu" value="Hem" style="margin-right: 20px;"></p:button>
                 <p:commandButton value="Logga ut" action="#{login.logout()}" class="cButton" />
             </h:form>
